# ItmoLabs

./: CODE_OF_CONDUCT.md  LICENSE  README.md
.github/workflows/: pr-assistant.yml
English/: Нодири Хисравхон 05.10.2022 .docx  Нодири Хисравхон 12.10.2022.docx  Нодири Хисравхон 16.11.2022.docx  Нодири Хисравхон 19.10.22.docx  Нодири Хисравхон 28.09.2022 .docx
Дискретная математика/: .~lock.Дз 4.odt#  ДЗ 6.odt  ДЗ 6.tex  Дз 2.odt  Дз 3.odt  Дз 4.odt  Дз 5.odt
Дискретная математика/ДЗ 6 Bruhные/: ДЗ 6.docx  ДЗ: 6.docx
Информатика/Аннотации/: Aннотация №5 Нодири Хисравхон.odt  Aннотация_№1_Нодири Хисравхон.odt
Информатика/Инф лаб 2 Kheming/: Code-Kheming.py
Информатика/Инф лаб 3 Regex/: full.py  tests2
Информатика/Инф лаб 3 regex/: full.py  one.py
Информатика/Инф лаб 4 Parsing/: 1.py  2.py  3.py  4.py  5.py  schedule.json  schedule.xml
Информатика/Инф лаб 4 convert/: 1.py  3.py  He was the one who always inspired me. He always g  schedule.json  schedule.xml  Инф лаба 4.odt
Информатика/Инф лаб 5 LaTeX/: Formula.tex  Title.tex  main.aux  main.tex
Информатика/Инф лаб 6 Discrete/: 123.xlsx  Main.ods  Main.xlsx  Rep.odt  XLSX.py  xlsx.py
Информатика/Инф лаб 6 Discrete Math/: Flags  Main with condition.ods
История/: Нодири Хисравхон - Реферат - 1.odt  Нодири Хисравхон - Рецензия - 2.odt  Нодири Хисравхон. Эссе - 2.docx  Нодири Хисравхон. Эссе.docx
Опд/Опд лаб 1/: Scrypt.sh  Опд лаб 1.docx
Опд/Опд лаб 2/: Lab2_opd.odt
Программирование/Lab3Bruh/: Лаб3.odt
Программирование/Lab3_Better/: Programming_theory.md.html
Программирование/Pokemon lab 2/: .~lock.Прог Лаба 2.odt#  Прог Лаба 2.odt
Сем 1/English/: Нодири Хисравхон 02.11.2022.docx  Нодири Хисравхон 09.11.2022.docx  Нодири Хисравхон 21.09.2022 .docx
Сем 1/Баз. мат/: Доп. задачи.odt
Сем 1/Дискретная математика/: ДЗ 6 BRUUUUUUH.docx  ДЗ 6.odt  Дз 2.odt  Дз 4.odt
Сем 1/История/: Нодири Хисравхон - Реферат - 2.odt  Нодири Хисравхон - Рецензия - 1.odt
Сем 2/БЖД/: Лабораторная_работа_Исследование_репродуктивного_поведения_семьи_2023.docx
Сем 2/БЭЖЭДЭЭЭАУФИЮФ/: Лабораторная работа №3 «Взрыв».docx  Лабораторная_работа_Страх_и_его_преодоление_2023.docx  Шаблон_лабораторной_работы_Саморегуляция_2023.docx  Шаблон_лабораторной_работы_Формирование_личного_бюджета_2023.docx
Сем 2/Базы данных/: Lab_1.odt  table.sql
Сем 2/Опд лаб 3/: Cmds.txt  Lab3_opd.odt  vals.asm  vals.txt
Сем 3/Бизнес-модели основных секторов инновационной экономики/: ДЗ-1.pptx  ДЗ-2.docx  ДЗ-3.pptx  ДЗ-4 черновик.xlsx  ДЗ-4.pptx  ДЗ-5.pptx  ДЗ-6.pptx  ДЗ-7.pptx
Сем 3/Веб-Программирование/: deploy.sh
Сем 3/Языки программирования/: Fastmake.sh
Сем 3/Языки программирования/Assignment-3-image-rotation_/solution/: CMakeLists.txt
Сем 3/Языки программирования/Assignment-3-image-rotation_/solution/include/: bmp.h  transformations.h
Сем 3/Языки программирования/Assignment-3-image-rotation_/solution/src/: bmp.c  main.c  transformations.c
Сем 5/Встроенные системы/Lab-1/: CMakeLists.txt  README.md  clang-tidy-checks.txt
Сем 5/Встроенные системы/Lab-1/solution/: CMakeLists.txt
Сем 5/Встроенные системы/Lab-1/solution/src/: elf.c  main.c
Сем 5/Встроенные системы/Lab-1/solution/src/include/: elf.h
Сем 5/Встроенные системы/Lab-1/tester/: CMakeLists.txt  compile_flags.txt  tester.cmake
Сем 5/Встроенные системы/Lab-1/tester/tests/1/: input
Сем 5/Встроенные системы/Lab-1/tester/tests/3/: input
Сем 5/Встроенные системы/Lab-1/tester/tests/5/: input  output
Сем 5/Встроенные системы/Lab-1/tester/tests/6/: input
Сем 5/Встроенные системы/Lab-1/tester/tests/7/: input  output
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/: .clang-format  .gitignore  CMakeLists.txt  README.md
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/.github/workflows/: cmake.yml
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/benchmark/: CMakeLists.txt
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/ci/: prepare.bash
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/cmake/: FindGBenchmark.cmake
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/source/: CMakeLists.txt
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/source/monolith/app/: Main.cpp
Сем 5/Операционные системы/Lab-1/diy-shell-benchmark-24y-Kuchizu/test/: CMakeLists.txt
(+1350 files in other folders)
